# hello-opencv

./: CMakeLists.txt  readme.txt
src/: img.cpp  img.h  main.cpp
